<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView android:id="@+id/img_produit_zoom" android:layout_width="0dp" android:layout_height="0dp"
        android:src="@drawable/placeholder" android:layout_margin="2dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" android:visibility="gone"
        android:onClick="onClickImageZoomed"/>


    <Button
        android:id="@+id/button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/btn_prev"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/btn_next"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"

        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/button_prev"
        app:layout_constraintRight_toLeftOf="@id/button_next"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickImage"


        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/img_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.7"


        android:text="@string/desc"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        />

    <Spinner
        android:id="@+id/sp_taille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintLeft_toRightOf="@id/desc"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0"
        android:entries="@array/array_taille"
        android:popupBackground="@color/colorPrimary"/>

    <ImageButton
        android:id="@+id/btn_bskt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="76dp"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintLeft_toRightOf="@id/desc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_basket_accueil_64"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/prix"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btn_bskt"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>